--- a/public/index.html
+++ b/public/index.html
@@ -12,28 +12,34 @@
     <!-- 446bc4479be13856e4628226251f3d58 -->
 
     <!-- <script type='text/javascript' src=></script> -->
-    <script src="index.js"></script>
-
 </head>
 
 <body >
-    <h1>Weather Stats Generator</h1>
+    <!-- <h1>Weather Stats Generator</h1>
     <div> <h3>Select City:</h3> 
     <input type='text' /></div>
    
     <h3>Select Date Range:</h3>
     <input type='date' id='start' />
     <input type='date' id='end' />
-    <button onclick='displayMin()'>Get data</button>
+    <button onclick='displayMin()'>Get data</button> -->
     <!-- // event handler here
     // onclick, invoke functions (min, max, etc.) -->
 
-    <div id='displayMin'></div>
+    <div id='testText3'>test</div>
+    <button id='testButton2'>testing</button>
+
+
+<!-- 
+
     <h3>Min Temperature for _____ from _____ to _____: </h3>
     <h3>Max Temperature for _____ from _____ to _____: </h3>
     <h3>Mode Temperature for _____ from _____ to _____: </h3>
-    <h3>Mean Temperature for _____ from _____ to _____: </h3>
+    <h3>Mean Temperature for _____ from _____ to _____: </h3> -->
+
+    <script src="index.js"></script>
 
 </body>
+
 
 </html>
