completed humidity rendering

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,10 @@
     <!-- // event handler here
     // onclick, invoke functions (min, max, etc.) -->
 
+    <input type='text' id='cityInput' placeholder= 'enter city name' />
+    <input type='text' id='countryInput' placeholder= 'enter country code' />
+    <button id='submitButton'>Submit</button>
+
     <div id='testText3'>test</div>
     <button id='testButton2'>testing</button>
 
@@ -36,6 +40,7 @@
     <h3>Max Temperature for _____ from _____ to _____: </h3>
     <h3>Mode Temperature for _____ from _____ to _____: </h3>
     <h3>Mean Temperature for _____ from _____ to _____: </h3> -->
+    <script src="config.js"></script>
 
     <script src="index.js"></script>
 
