--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <title>Weather Stats Generator</title>
-        <!-- <link rel="stylesheet" href="/styles.css"> -->
+        <link rel="stylesheet" href="/styles.css">
         <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     </head>
 
@@ -16,6 +16,8 @@
         <input type='text' id='countryInput' placeholder= 'enter country code' />
         <button id='submitButton'>Submit</button>
         <div id='resultText'>PLACEHOLDER</div>
+
+        <table id='statsTable'></table>
 
         <script src="config.js"></script>
         <script src="index.js"></script>
