complete basic requirements

--- a/public/index.html
+++ b/public/index.html
@@ -10,14 +10,15 @@
 
     <body >
         <h1>Weather Stats Generator</h1>
-        <div> <h3>Select City and Country:</h3> 
+        <h3>Enter City and Country:</h3> 
 
-        <input type='text' id='cityInput' placeholder= 'enter city name' />
-        <input type='text' id='countryInput' placeholder= 'enter country code' />
+        <input type='text' id='cityInput' placeholder= 'city name (ie: seattle)' />
+        <input type='text' id='countryInput' placeholder= 'country code (ie: us)' />
         <button id='submitButton'>Submit</button>
-        <div id='resultText'>PLACEHOLDER</div>
-
-        <table id='statsTable'></table>
+        <div id='resultText'></div>
+        <div>
+            <table id='statsTable'></table>
+        </div>
 
         <script src="config.js"></script>
         <script src="index.js"></script>
